--- a/dados.ipynb
+++ b/dados.ipynb
@@ -16,12 +16,20 @@
     "## Índice\n",
     "\n",
     "- [Introdução](#introducao)\n",
-    "- [Análise Exploratória](#analise)"
+    "- [Análise Exploratória](#analise)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importando as Bibliotecas \n",
+    "____"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,15 +46,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diretório onde está nosso arquivo\n",
+    "___"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esperamos trabalhar no diretório c:\\Users\\lucas\\Downloads\\Projeto_2_Cdados-1\n"
+      "Esperamos trabalhar no diretório c:\\Users\\m_gab\\OneDrive\\Área de Trabalho\\Insper\\2 semestre\\Cdados\\P2\\Projeto_2_Cdados\n"
      ]
     }
    ],
@@ -62,11 +78,15 @@
     "\n",
     "# Introdução\n",
     "\n",
-    "Nosso Projeto 2 de Cdados será baseado em analise/previsão do gênero musical de uma determinada pessoa. Essa 'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros. A descrição do nosso problema é baseado em uma pessoa não saber o seu estilo musical dessa maneira com a construção do nosso projeto dois, conseguiremos fazer uma previsão em qual estimo musical determinada pessoa está mais inserida.\n",
+    "\n",
+    "- Nosso Projeto 2 de Cdados será baseado em analise/previsão do gênero musical de uma determinada pessoa. Essa 'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros. A descrição do nosso problema é baseado em uma pessoa não saber o seu estilo musical dessa maneira com a construção do nosso projeto dois, conseguiremos fazer uma previsão em qual estimo musical determinada pessoa está mais inserida.\n",
+    "___\n",
     "\n",
     "# Contextualização\n",
     "\n",
-    "Atualmente, com a evolução da tecnologia tornou se possível a construção de uma comunidade baseado em seus gostos musicais a fim de criar uma maior interatividade entre as pessoas. Entretanto muitas pessoas não sabem o estilo  em que está mais inserido e com isso acaba não interagindo com pessoas que gostam dos mesmos artistas, estilos musicais. Portanto, o objetivo desse projeto é classificar/prever  o gênero musical de uma determinada pessoa. Sendo que essa  'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros para que seja possível a realização da classificação/previsão.\n",
+    "\n",
+    "- Atualmente, com a evolução da tecnologia tornou se possível a construção de uma comunidade baseado em seus gostos musicais a fim de criar uma maior interatividade entre as pessoas. Entretanto muitas pessoas não sabem o estilo  em que está mais inserido e com isso acaba não interagindo com pessoas que gostam dos mesmos artistas, estilos musicais. Portanto, o objetivo desse projeto é classificar/prever  o gênero musical de uma determinada pessoa. Sendo que essa  'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros para que seja possível a realização da classificação/previsão.\n",
+    "___\n",
     "\n",
     "## Entendendo as features\n",
     "\n",
@@ -89,8 +109,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Abrindo o banco de dados \n",
+    "___\n",
+    "\n",
+    "- Realização das primeiras limpezas em nosso banco de dados "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +273,7 @@
        "6    0.230  Electronic  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +391,7 @@
        "Electronic          4032"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,11 +404,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<div id=\"analise\">\n",
     "\n",
     "## Análise Exploratória dos Dados\n",
     "\n",
-    "Na análise exploratória, nosso objetivo é descobrir quais variáveis são significantes para a predição."
+    "Na análise exploratória, nosso objetivo é descobrir quais variáveis são significantes para a predição, para isso usamos o boxplot para visualizar os dados e com isso tirar conclusoes sobre quais variáveis são importantes para a predição, e quais não são.\n",
+    "- Primeiro vamos explicar como o boxplot é utilizado para visualizar os dados, O gráfico de box-plot foi criado pelo estatístico John Tukey há quase 50 anos, e é usado até hoje nos dando uma clareza da distribuição dos dados numéricos, resumidos em cinco números: mínimo, primeiro quartil, mediana, terceiro quartil, e máximo. Esses valores são calculados ordenando primeiramente a amostra do menor para o maior. ~É uma ferramenta gráfica que permite visualizar a distribuição e valores discrepantes (outliers) dos dados, fornecendo assim um meio complementar para desenvolver uma perspectiva sobre o caráter dos dados. Além disso, o boxplot também é uma disposição gráfica comparativa. Observe a figura do boxplot. Note que o local onde a haste vertical começa (de baixo para cima) indica o mínimo (excetuando algum possível valor extremo ou outlier) e, onde a haste termina indica o máximo (também excetuando algum possível outlier).\n",
+    "![title](imagens/boxplot.png)\n",
+    "- O retângulo no meio dessa haste possui três linhas horizontais: a linha de baixo, que é o próprio contorno externo inferior do retângulo, indica o primeiro quartil. A de cima, que também é o próprio contorno externo superior do retângulo, indica o terceiro quartil. A linha interna indica o segundo quartil ou mediana,os asteriscos ou pontos que ás vezes aparecem no boxplot indicam que aquelas observações são atípicas, valores discrepantes, extremos ou outliers.\n",
+    "## **Como interpretar o boxplot?**\n",
+    "O boxplot nos fornece uma análise visual da posição, dispersão, simetria, caudas e valores discrepantes (outliers) do conjunto de dados.\n",
+    " - **Posição** – Em relação à posição dos dados, observa-se a linha central do retângulo (a mediana ou segundo quartil).\n",
+    " - **Dispersão** – A dispersão dos dados pode ser representada pelo intervalo interquartílico que é a diferença entre o terceiro quartil e o primeiro quartil (tamanho da caixa), ou ainda pela amplitude que é calculada da seguinte maneira: valor máximo – valor mínimo. Embora a amplitude seja de fácil entendimento, o intervalo interquartílico é uma estatística mais robusta para medir variabilidade uma vez que não sofre influência de outliers.\n",
+    " - **Simetria** – Um conjunto de dados que tem uma distribuição simétrica, terá a linha da mediana no centro do retângulo. Quando a linha da mediana está próxima ao primeiro quartil, os dados são assimétricos positivos e quando a posição da linha da mediana é próxima ao terceiro quartil, os dados são assimétricos negativos. Vale ressaltar que a mediana é a medida de tendência central mais indicada quando os dados possuem distribuição assimétrica, uma vez que a média aritmética é influenciada pelos valores extremos.\n",
+    " - **Caudas** – As linhas que vão do retângulo até aos outliers podem fornecer o comprimento das caudas da distribuição.\n",
+    " - **Outliers** – Já os outliers indicam possíveis valores discrepantes. No boxplot, as observações são consideradas outliers quando estão abaixo ou acima do limite de detecção de outliers.\n",
+    "O limite de detecção de outliers é construído utilizando o intervalo interquartílico, dado pela distância entre o primeiro e o terceiro quartil. Sendo assim, os limites inferior e superior de detecção de outlier são dados por:\n",
+    " - Limite Inferior = Primeiro Quartil – 1,5 * (Terceiro Quartil – Primeiro Quartil)\n",
+    " - Limite Superior = Terceiro Quartil + 1,5 * (Terceiro Quartil – Primeiro Quartil)"
    ]
   },
   {
@@ -390,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -477,8 +521,7 @@
     "### Explicação do Gráfico\n",
     "____\n",
     "\n",
-    "1) \n",
-    "2)"
+    "1) Boxplot: Em relação a popularidade no eixo y e os generos musicais no eixo x, percebemos uma relação 'fora da curva'\n"
    ]
   },
   {
@@ -490,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1115,7 @@
        "RandomForestRegressor(n_estimators=200, n_jobs=-1, random_state=42)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1183,7 @@
        "<AxesSubplot:title={'center':'Matriz de confusão'}>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1181,59 +1224,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting graphviz\n",
-      "  Downloading graphviz-0.18.2-py3-none-any.whl (39 kB)\n",
-      "Installing collected packages: graphviz\n",
-      "Successfully installed graphviz-0.18.2\n",
-      "Collecting pydotplus\n",
-      "  Downloading pydotplus-2.0.2.tar.gz (278 kB)\n",
-      "Requirement already satisfied: pyparsing>=2.0.1 in c:\\users\\lucas\\anaconda3\\lib\\site-packages (from pydotplus) (2.4.7)\n",
-      "Building wheels for collected packages: pydotplus\n",
-      "  Building wheel for pydotplus (setup.py): started\n",
-      "  Building wheel for pydotplus (setup.py): finished with status 'done'\n",
-      "  Created wheel for pydotplus: filename=pydotplus-2.0.2-py3-none-any.whl size=24572 sha256=b6c05f0f1f164975bcfa65a33d6d76e839797407b959d0d1550a4d068a7424ba\n",
-      "  Stored in directory: c:\\users\\lucas\\appdata\\local\\pip\\cache\\wheels\\fe\\cd\\78\\a7e873cc049759194f8271f780640cf96b35e5a48bef0e2f36\n",
-      "Successfully built pydotplus\n",
-      "Installing collected packages: pydotplus\n",
-      "Successfully installed pydotplus-2.0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "!pip install graphviz\n",
-    "\n",
-    "!pip install pydotplus\n",
-    "\n",
-    "from io import StringIO\n",
-    "from IPython.display import Image\n",
-    "from sklearn.tree import export_graphviz\n",
-    "import pydotplus"
+    "from sklearn.tree import DecisionTreeClassifier\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Score train dataset : 0.17481919789612096\n",
-      " Score test dataset: 0.17741617357001974\n"
+      " Score train dataset : 0.9289940828402367\n",
+      " Score test dataset: 0.43658777120315584\n"
      ]
     }
    ],
    "source": [
-    "tree= DecisionTreeClassifier(max_depth=5, criterion=\"entropy\", splitter=\"best\").fit(train_features,train_labels)\n",
+    "tree= DecisionTreeClassifier(max_depth=20, criterion=\"entropy\", splitter=\"best\", random_state = 0).fit(train_features,train_labels)\n",
     "\n",
     "score_train_tree = tree.score(train_features, train_labels)\n",
     "score_test_tree = tree.score(test_features, test_labels)\n",
@@ -1243,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,63 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O Melhor valor para \"max_depth\" é 5, com critério \"entropy\"\n",
-      "e Spliter \"best\":\n",
-      " \n",
-      "(training):\t0.17481919789612096\n",
-      " (test):\t0.17741617357001974\n",
-      "O Tempo de execução foi de 206.7059268951416s\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "inicio = time.time()     # Inicio tempo de execução\n",
-    "\n",
-    "train_score_tree=0\n",
-    "test_score_tree=0\n",
-    "max_depth1=0\n",
-    "criterion_best =''\n",
-    "splitter_best = ''\n",
-    "for i in range(1,37):\n",
-    "    for criterion in ['gini','entropy']:\n",
-    "        for splitter in ['random','best']:\n",
-    "            \n",
-    "            tree=DecisionTreeClassifier(criterion=criterion,splitter=splitter,\n",
-    "                                        max_depth=i,random_state=0).fit(train_features,train_labels)\n",
-    "            train_score=tree.score(train_features,train_labels)\n",
-    "            test_score=tree.score(test_features,test_labels)\n",
-    "            #Evitando parte de Overffiting\n",
-    "            if test_score>train_score:\n",
-    "                if test_score>test_score_tree:\n",
-    "                    test_score_tree=test_score\n",
-    "                    max_depth1=i\n",
-    "                    train_score_tree=train_score\n",
-    "                    criterion_best = criterion\n",
-    "                    splitter_best = splitter\n",
-    "                else:\n",
-    "                    continue\n",
-    "            else:\n",
-    "                continue\n",
-    "fim = time.time()  #Fim - tempo de execução    \n",
-    "\n",
-    "print(f'''O Melhor valor para \"max_depth\" é {max_depth1}, com critério \"{criterion_best}\"\n",
-    "e Spliter \"{splitter_best}\":\\n \n",
-    "(training):\\t{train_score_tree}\\n (test):\\t{test_score_tree}''')\n",
-    "\n",
-    "print(f'O Tempo de execução foi de {fim-inicio}s')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
