descrição dos graficos

--- a/dados.ipynb
+++ b/dados.ipynb
@@ -8,10 +8,16 @@
     "\n",
     "**Dataset:** [https://www.kaggle.com/vicsuperman/prediction-of-music-genre](https://www.kaggle.com/vicsuperman/prediction-of-music-genre)\n",
     "\n",
+    "#### Autores\n",
+    "\n",
     "- Lucas Gurgel\n",
     "- Gabriela Albuquerque\n",
     "- João Pedro Lima\n",
     "- Pedro Fracassi\n",
+    "\n",
+    "#### Professor \n",
+    "\n",
+    "- Maciel\n",
     "\n",
     "## Índice\n",
     "\n",
@@ -537,9 +543,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "____\n",
     "\n",
-    "- Boxplot: Em relação a popularidade no eixo y e os gêneros musicais no eixo x, percebemos uma relação 'fora da curva' para todos os gêneros musicas representados em nosso gráfico. Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n"
+    "- Boxplot: Em relação a popularidade no eixo y e os gêneros musicais no eixo x, percebemos uma relação 'fora da curva' para todos os gêneros musicas representados em nosso gráfico. Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___\n"
    ]
   },
   {
@@ -590,9 +596,10 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
     "\n",
-    "- Boxplot: Em relação a acústica da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação 'fora da curva' para alguns gêneros musicas como 'clássico','eletrônica', 'rock','hip-hop','rap' e por fim 'alternativo' . Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n"
+    "\n",
+    "- Boxplot: Em relação a acústica da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação 'fora da curva' para alguns gêneros musicas como 'clássico','eletrônica', 'rock','hip-hop','rap' e por fim 'alternativo' . Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___"
    ]
   },
   {
@@ -643,8 +650,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
-    "- "
+    "\n",
+    "-  Boxplot: Em relação a 'danceability' da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação de 'fora da curva' pequena para alguns gêneros, isso pode atrapalhar na hora de concluirmos sobre alguma probabilidade. Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___ "
    ]
   },
   {
@@ -695,9 +703,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
     "\n",
-    "-"
+    "- Boxplot: Em relação a 'duration' da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação de 'fora da curva' pequena para todos os gêneros, isso pode atrapalhar na hora de concluirmos sobre alguma probabilidade. Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "____"
    ]
   },
   {
@@ -748,9 +756,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
     "\n",
-    "-"
+    "- Boxplot: Em relação a 'energy' da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação de 'fora da curva' especialmente para o 'classical', isso pode atrapalhar na hora de concluirmos sobre alguma probabilidade. Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___"
    ]
   },
   {
@@ -801,9 +809,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
     "\n",
-    "-"
+    "- Boxplot: Em relação a 'instrumentalness' da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação de 'fora da curva' para alguns gêneros que possuem densidade muito baixa, tal fato torna nossa feature escassa, visto que não podemos concluir qual gênero é o mais provável. Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___"
    ]
   },
   {
@@ -854,9 +862,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
     "\n",
-    "-"
+    "- Boxplot: Em relação a 'liveness' da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação de 'fora da curva' para todos os gêneros, tal fato torna nossa feature escassa, visto que não podemos concluir qual gênero é o mais provável. Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___"
    ]
   },
   {
@@ -907,9 +915,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
     "\n",
-    "-"
+    "- Boxplot: Em relação a 'loudness' da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação pequena de 'fora da curva' para todos os gêneros, mas mesmo sendo pequena, tal fato ainda pode comprometer a análise . Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___"
    ]
   },
   {
@@ -960,9 +968,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
     "\n",
-    "-"
+    "- Boxplot: Em relação a 'speechiness' da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação 'fora da curva' para todos os gêneros, logo . Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___"
    ]
   },
   {
@@ -1013,9 +1021,9 @@
    "metadata": {},
    "source": [
     "### Explicação do Gráfico\n",
-    "___\n",
     "\n",
-    "-"
+    "- Boxplot: Em relação a 'valence' da música  no eixo y e os gêneros musicais no eixo x, percebemos uma relação 'fora da curva' especialmente para o 'classical'. Por isso em relação ao implementar os nossos três modelos teremos uma certa anomalia nos resultados esperados. Com isso concluímos que em relação ao banco de dados nesse aspecto ele está muito limitado e para bons resultados era necessário de algo bem abrangente.\n",
+    "___"
    ]
   },
   {
@@ -1054,10 +1062,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explicação do Gráfico\n",
-    "___\n",
+    "### Explicação do Mapa de Calor \n",
     "\n",
-    "1)"
+    "O Mapa de calor é um gráfico de dispersão de dados, onde os dados são representados por cores, que são aplicadas de acordo com a correlação entre as variáveis. A correlação entre duas variáveis é calculada pela fórmula:\n",
+    "- Correlação = (Número de valores coincidentes) / (Número de valores da primeira variável)\n",
+    "- A correlação entre duas variáveis é um valor entre -1 e 1, onde -1 significa que as duas variáveis são totalmente independentes e 1 significa que as duas variáveis são totalmente dependentes.\n",
+    "Como podemos ver os quadrados que estão na diagonal principal apresentam valores de correlação iguais a 1, ou seja, as duas variáveis são totalmente dependentes. Os quadrados que não estão na diagonal principal apresentam valores de correlação entre -1 e 1, onde -1 significa que as duas variáveis são totalmente independentes e vai crescendo de até 1, assim podemos analisar a correlação entre as variáveis.\n",
+    "Um exemplo de mapa de calor para as variáveis `acousticness` e `valence` apresenta uma cor mais fraca que se aproxima de valores negativos, no caso cerca de -0.5, mostrando no caso que são idependentes.\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Conclusão após a Análise Exploratória \n",
+    "\n",
+    "-\n",
+    "___"
    ]
   },
   {
@@ -1242,11 +1264,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Score train dataset : 0.33034188034188033\n",
+      " Score test dataset: 0.3044378698224852\n"
+     ]
+    }
+   ],
    "source": [
-    "tree= DecisionTreeClassifier(max_depth=20, criterion=\"entropy\", splitter=\"best\", random_state = 0).fit(train_features,train_labels)\n",
+    "tree= DecisionTreeClassifier(max_depth=8, criterion=\"entropy\", splitter=\"best\", random_state = 0).fit(train_features,train_labels)\n",
     "\n",
     "score_train_tree = tree.score(train_features, train_labels)\n",
     "score_test_tree = tree.score(test_features, test_labels)\n",
@@ -1256,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1308,6 +1339,27 @@
     "arvore_decisao_pred = Decision_model.predict(test_features)\n",
     "acuracia_dt= metrics.accuracy_score(test_labels,arvore_decisao_pred)*100\n",
     "print(f'Precisão do modelo (Decision Tree): {np.mean(acuracia_dt):.4f} %')#acuracia média do modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Terceiro Modelo:** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referência Bibliográfica "
    ]
   }
  ],
